Update from curriculum repo

--- a/module-2/lesson-1/FD_Module2_Lesson1.ipynb
+++ b/module-2/lesson-1/FD_Module2_Lesson1.ipynb
@@ -49,7 +49,10 @@
     "\n",
     "import numpy as np\n",
     "import pandas_datareader.data as web\n",
-    "from IPython.display import VimeoVideo"
+    "import yfinance as yfin\n",
+    "from IPython.display import VimeoVideo\n",
+    "\n",
+    "yfin.pdr_override()"
    ]
   },
   {
@@ -70,12 +73,15 @@
     "# end = datetime.date.today()\n",
     "start = datetime.date(2016, 11, 16)\n",
     "end = datetime.date(2021, 11, 18)\n",
-    "df = web.DataReader([\"AMZN\", \"F\", \"BTC-USD\"], \"yahoo\", start, end)[\"Adj Close\"]"
+    "df = web.DataReader([\"AMZN\", \"F\", \"BTC-USD\"], start, end)[\"Adj Close\"]"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### 1.1 Taking a look at the data\n",
     "Unless you're extremely familiar with the dataset you're working with, it's almost always a good idea to take a look at the first few rows of the data to get an idea on how it looks. We can accomplish this using the *head()* method. You can pass a numerical parameter in this (for example, 10) and it will return the top 10 rows of the data set. By default, it returns the first five."
@@ -237,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.join(web.DataReader([\"BLV\"], \"yahoo\", start, end)[\"Adj Close\"])"
+    "df = df.join(web.DataReader([\"BLV\"], start, end)[\"Adj Close\"])"
    ]
   },
   {
@@ -376,7 +382,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fed479ec",
    "metadata": {},
    "source": [
     "---\n",
@@ -402,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
