--- a/module-3/lesson-1/FD_Module3_Lesson1.ipynb
+++ b/module-3/lesson-1/FD_Module3_Lesson1.ipynb
@@ -529,10 +529,13 @@
   {
    "cell_type": "markdown",
    "id": "e4d0d8ff",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "---\n",
-    "Copyright © 2022 WorldQuant University. This\n",
+    "Copyright 2023 WorldQuant University. This\n",
     "content is licensed solely for personal use. Redistribution or\n",
     "publication of this material is strictly prohibited.\n"
    ]
