--- a/module-3/lesson-3/FD_Module3_Lesson3.ipynb
+++ b/module-3/lesson-3/FD_Module3_Lesson3.ipynb
@@ -274,10 +274,13 @@
   {
    "cell_type": "markdown",
    "id": "db444e13",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "---\n",
-    "Copyright © 2022 WorldQuant University. This\n",
+    "Copyright 2023 WorldQuant University. This\n",
     "content is licensed solely for personal use. Redistribution or\n",
     "publication of this material is strictly prohibited.\n"
    ]
